--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -31,3 +31,10 @@
 .md blockquote {
 	@apply italic text-gray-500 mt-2 pl-5 border-l-4 border-gray-300;
 }
+.md pre {
+	@apply mt-4 bg-slate-100 dark:bg-slate-800 p-4 rounded-xl;
+}
+
+.sagikos {
+	color: rgb(255,101,122);
+}
